--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 variables) leads to the emergence of representations that provide good 
 generalization properties for novel tasks (i.e., abstract representations).  </p>
 <ul>
-<li><strong>Johnston WJ</strong>, Fusi S (2021) Abstraction emerges naturally in networks 
+<li><strong>Johnston WJ</strong>, Fusi S (2023) Abstraction emerges naturally in networks 
   trained to perform multiple tasks. 
   <a href="https://doi.org/10.1038/s41467-023-36583-0">Nature Communications</a>  </li>
 </ul>
@@ -63,9 +63,9 @@ subspaces are parallel enough to allow for some generalization of the code for
 value from one spatial location to another. We argue that this commonality may 
 be important for efficient learning. </p>
 <ul>
-<li><strong>Johnston WJ+</strong>, Fine JM+, Yoo SBM, Ebitz RB, Hayden BY (2022) Subspace 
-  orthogonalization as a mechanism for binding values to space. 
-  <a href="https://doi.org/10.48550/arXiv.2205.06769">arXiv</a></li>
+<li><strong>Johnston WJ+</strong>, Fine JM+, Yoo SBM, Ebitz RB, Hayden BY (2023) Semi-orthogonal 
+subspaces for value mediate a tradeoff between binding and generalization. 
+  <a href="https://doi.org/10.48550/arXiv.2309.07766">arXiv</a></li>
 </ul>
 <p>Across different brain regions, the animal must integrate distinct
 representations of the same set of objects. This is referred to as the 
