updated wi zine

--- a/wild_iris/index.html
+++ b/wild_iris/index.html
@@ -7,11 +7,9 @@
 <body class="org_page">
 <h1>A botanical companion to The Wild Iris</h1>
 
-<p>I have collected images of and some basic information about all the plants 
-mentioned in Louise Glück's book The Wild Iris (please 
-<a href="mailto:wjeffreyjohnston@gmail.com">tell me</a> if I'm missing any). This 
-project is meant as a reference for the curious and -- like me -- botanically 
-ignorant reader of this wonderful book. </p>
+<p>This zine collects images of and some basic information about all the plants mentioned in Louise Glück's book <em>The Wild Iris</em> (please <a href="mailto:wjj@posteo.net">contact me</a> if you notice any that are missing). The zine is meant as a reference for the curious and -- like me -- botanically ignorant reader of this wonderful book. </p>
+
+<p>There is a pdf version of the zine available <a href="https://wj2.github.io/wild_iris/a_botanical_companion_to_the-wild-iris.pdf">here</a>.</p>
 
 <p><strong>Practical notes:</strong> There is a navigation bar at the top of each page. Hover over italicized words in "Type" section to see the definition from the glossary. Hover over the number(s) in the "References" section to see the reference.</p>
 
@@ -19,7 +17,7 @@ ignorant reader of this wonderful book. </p>
 
 <ol>
 <li><p><a href="introduction.html">Introduction</a></p></li>
-<li><p><a href="license.html">License and other matters</a></p></li>
+<li><p><a href="license.html">License</a></p></li>
 </ol>
 
 <h3>The Wild Iris</h3>
