--- a/wild_iris/license.html
+++ b/wild_iris/license.html
@@ -1,22 +1,23 @@
 
 <head>
 <link rel="stylesheet" href="./css/prepost_main.css"/>
-<title>License and other matters</title>
+<title>License</title>
 </head>
 
 <body class="org_page">
 <a href="./index.html">table of contents</a>
 
-<h1>License and other matters</h1>
+<h2>License</h2>
 
 <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />
-This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC International License</a>. This means that you are free to share and adapt this work for non-commercial purposes so long as you credit this zine. You can credit the zine using the following citation:</p>
+This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC International License</a>. This means that you are free to share and adapt this work for non-commercial purposes so long as you credit this zine. You can credit the zine using the following citation:
+\begin{quote}
+A botanical companion to The Wild Iris. (2024)
+\end{quote}</p>
 
-<blockquote>
-  <p>Johnston WJ (2023). A botanical companion to The Wild Iris. </p>
-</blockquote>
+<p>All of the images are referenced to their source and (where known) their license is provided in the bottom right hand corner of each page. If you believe an image should be removed, please <a href="mailto:wjj@posteo.net">contact me</a>. </p>
 
-<p>All of the images are referenced to their source and (where known) their license is provided in the bottom right hand corner of each page. If you believe an image should be removed, please <a href="mailto:wjeffreyjohnston@gmail.com">contact me</a>.</p>
+<p>The zine is generated using a mixture of python and latex. You can see all of the underlying code online in the zine's <a href="">github repository</a>. </p>
 
 
 <a href="./index.html">table of contents</a>
