added link to zine

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ union. I am interested in cooperative living, eating, and other forms of sharing
 resources. Other activities, interests, and hobbies include: working toward police 
 and prison abolition, reading poetry, gardening, learning to paint and draw, 
 playing board games, backpacking, canoeing, canyoneering. </p>
+<p>Related to some of these interests, I have recently completed a zine project: A botanical companion to <em>The Wild Iris</em> (<a href="https://wj2.github.io/wild_iris/">web</a>, <a href="https://wj2.github.io/wild_iris/a_botanical_companion_to_the-wild-iris.pdf">pdf</a>), a reference companion to the book of poetry by Louise Gluck. </p>
 <table>
 <thead>
 <tr>
