Updated summary page

--- a/index.html
+++ b/index.html
@@ -23,23 +23,14 @@
     
 
     <p>I am a postdoctoral research scientist in the Center for Theoretical Neuroscience
-at Columbia University. I did my graduate work with David Freedman at The 
-University of Chicago. </p>
-<p>In my research, I like to think about how the neural code solves problems 
-such as: remaining robust in the face of noise (or other disorder), allows for 
-generalization across different contexts and between different stimuli, 
-represents multiple different stimuli at once without confusing them, and
--- of course -- how it does all of this at once! I believe that the fact that
-the brain must often represent multiple stimuli simultaneously is an important 
-constraint on the neural code that is understudied in theoretical neuroscience.
-As a result, much of my current work is at least obliquely related to this 
-topic. </p>
+at Columbia University. I was recently awarded an NINDS K99/R00 Transition to Independence award, and will be applying for faculty jobs in the coming cycles. I did my graduate work with David Freedman at The University of Chicago. </p>
+<p>In my research, I like to think about how representational geometry supports (or not) robust decisions, generalization to novel conditions, reliable representations of multiple stimuli at once, and rapid learning. These different demands can sometimes conflict with each other (for instance, <a href="https://rdcu.be/dUbMd">generalization to novel stimuli and reliable representations of multiple stimuli</a>), and I am particularly interested in how the brain navigates these tradeoffs. I use a variety of tools, including: statistical analysis, pen-and-paper theory, and artificial neural networks.</p>
 <p>Outside my research, I am a member and steward of the Columbia Postdoctoral Worker 
 union. I am interested in cooperative living, eating, and other forms of sharing 
 resources. Other activities, interests, and hobbies include: working toward police 
 and prison abolition, reading poetry, gardening, learning to paint and draw, 
 playing board games, backpacking, canoeing, canyoneering. </p>
-<p>Related to some of these interests, I have recently completed a zine project: A botanical companion to <em>The Wild Iris</em> (<a href="https://wj2.github.io/wild_iris/">web</a>, <a href="https://wj2.github.io/wild_iris/a_botanical_companion_to_the-wild-iris.pdf">pdf</a>), a reference companion to the book of poetry by Louise Gluck. </p>
+<p>Related to some of these interests, I recently made a zine: A botanical companion to <em>The Wild Iris</em> (<a href="https://wj2.github.io/wild_iris/">web</a>, <a href="https://wj2.github.io/wild_iris/a_botanical_companion_to_the-wild-iris.pdf">pdf</a>), a reference companion to the book of poetry by Louise Gluck. </p>
 <table>
 <thead>
 <tr>
@@ -53,7 +44,11 @@ playing board games, backpacking, canoeing, canyoneering. </p>
 <td>he/they</td>
 </tr>
 <tr>
-<td><em>Email:</em></td>
+<td><em>Work email:</em></td>
+<td>wjeffreyjohnston (at) gmail (dot) com</td>
+</tr>
+<tr>
+<td><em>Personal email:</em></td>
 <td>wjj (at) posteo (dot) net</td>
 </tr>
 <tr>
