slight updates to cv and project descriptions

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 
     <p>For the most up-to-date publication list, please visit my 
 <a href="https://scholar.google.com/citations?user=xz_4ws0AAAAJ&amp;hl=en">Google Scholar page</a>.</p>
-<h3>The emergence of abstract representations</h3>
+<h3>The emergence of abstract and modular representations</h3>
 <p>We show that training feedforward neural networks to perform multiple tasks
 (here, linear and somewhat nonlinear classifications of a set of latent 
 variables) leads to the emergence of representations that provide good 
@@ -33,6 +33,10 @@ generalization properties for novel tasks (i.e., abstract representations).  </p
 <li><strong>Johnston WJ</strong>, Fusi S (2023) Abstraction emerges naturally in networks 
   trained to perform multiple tasks. 
   <a href="https://doi.org/10.1038/s41467-023-36583-0">Nature Communications</a>  </li>
+</ul>
+<p>Then, we built on these results to show when specialized subpopulations of neurons emerge in neural networks trained to perform behavioral tasks -- particularly focusing on behavioral tasks with contextual structure. This theory makes predictions for when we will see functionally specialized subpopulations of neurons in the brain. </p>
+<ul>
+<li><strong>Johnston WJ</strong>, Fusi S (2024) Modular representations emerge in neural networks trained to perform context-dependent tasks. <a href="https://doi.org/10.1101/2024.09.30.615925">bioRxiv</a></li>
 </ul>
 <h3>Robustness in neural codes</h3>
 <p>We show that neural representations can be made more reliable by using 
@@ -65,7 +69,7 @@ be important for efficient learning. </p>
 <ul>
 <li><strong>Johnston WJ+</strong>, Fine JM+, Yoo SBM, Ebitz RB, Hayden BY (2023) Semi-orthogonal 
 subspaces for value mediate a tradeoff between binding and generalization. 
-  <a href="https://doi.org/10.48550/arXiv.2309.07766">arXiv</a></li>
+  <a href="https://doi.org/10.1038/s41593-024-01758-5">Nature Neuroscience</a></li>
 </ul>
 <p>Across different brain regions, the animal must integrate distinct
 representations of the same set of objects. This is referred to as the 
@@ -79,6 +83,10 @@ of assignment.  </p>
 <li><strong>Johnston WJ</strong>, Freedman DJ (2023) Redundant representations are required to
   disambiguate simultaneously presented complex stimuli. 
   <a href="https://doi.org/10.1371/journal.pcbi.1011327">PLOS Computational Biology</a>  </li>
+</ul>
+<p>In addition, we studied a common case of an apparent misbinding error: The swap error in working memory tasks. We find that swap errors emerge during the selection of correctly remembered information from working memory -- thus highlighting this selection process as a bottleneck on reliable behavior. </p>
+<ul>
+<li>Alleman M, Panichello M, Buschman T, <strong>Johnston WJ</strong> (2024) The neural basis of swap errors in working memory. <a href="https://doi.org/10.1073/pnas.2401032121">PNAS</a></li>
 </ul>
 <h3>Directed and undirected tasks</h3>
 <p>We compared recordings from the primate lateral intraparietal area (LIP) 
